# AMQPush

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: amqp.rs  broker.rs  dock_icon.rs  history_store.rs  lib.rs  main.rs  notif_drainer.rs  profiles.rs  queues.rs  recordings.rs  subscriber.rs  templates.rs
src/components/: Callout.tsx  CodeEditor.tsx  CollapsibleSection.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CopyButton.tsx  Dropdown.tsx  EmptyState.tsx  HelpModal.tsx  LogPanel.tsx  PropsList.tsx  QueuePicker.tsx  SectionLabel.tsx  SegmentedControl.tsx  Sidebar.tsx  Sparkline.tsx  Tabs.tsx  Toggle.tsx  TokenInput.tsx  ViewTopBar.tsx  autocompleteShared.tsx
src/components/views/: BrowserView.tsx  ConnectionView.tsx  ConsoleView.tsx  HistoryView.tsx  InspectorView.tsx  PublisherView.tsx  QueuesView.tsx  StatsView.tsx  SubscriberView.tsx
src/hooks/: useTheme.ts
src/utils/: bodyView.ts  diff.ts  format.ts  recentQueues.ts  updateCheck.ts  variables.ts
