[package]
name = "amqpush"
version = "1.0.0"
description = "AMQPush — AMQP 1.0 desktop client"
authors = ["sgryzhin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amqpush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Explicit binary target so the executable file (and macOS Dock label in dev) is "AMQPush"
# instead of the lowercase package name "amqpush".
[[bin]]
name = "AMQPush"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.2", features = ["full"] }
fe2o3-amqp = { version = "0.14.0", features = ["native-tls"] }
fe2o3-amqp-types = "0.14.0"
uuid = { version = "1.23.1", features = ["v4"] }
dirs = "6.0.0"
chrono = "0.4.44"
base64 = "0.22.1"

