[package]
name = "amqpush"
version = "1.4.0"
description = "AMQPush — AMQP 1.0 desktop client"
authors = ["sgryzhin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amqpush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Explicit binary target so the executable file (and macOS Dock label in dev) is "AMQPush"
# instead of the lowercase package name "amqpush".
[[bin]]
name = "AMQPush"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Used by build.rs to stamp a `ddMMyyyy` build date into the binary via an
# env var, which the About menu shows in parentheses next to the version.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# Native file picker — used by the mTLS UI to let users browse for cert /
# key files instead of pasting paths.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.2", features = ["full"] }
fe2o3-amqp = { version = "0.14.0", features = ["native-tls"] }
fe2o3-amqp-types = "0.14.0"
# WebSocket transport (wss://) for brokers behind corporate firewalls that
# block raw 5671/5672. Only used when a profile opts in via use_ws=true.
fe2o3-amqp-ws = { version = "0.14.0", features = ["native-tls"] }
# Direct dep so we can construct Described<Value> + Descriptor for the
# JMS-selector filter set in subscriber.rs. fe2o3-amqp-types pulls the same
# 0.14 in transitively, so this adds zero compile cost.
serde_amqp = "0.14"
native-tls = "0.2"
tokio-native-tls = "0.3"
uuid = { version = "1.23.1", features = ["v4"] }
dirs = "6.0.0"
chrono = "0.4.44"
base64 = "0.22.1"

# macOS-only — used to set the Dock / About-dialog icon at runtime so dev-mode
# (raw binary, no .app bundle) shows the AMQPush logo instead of the generic
# blue-folder placeholder. Production .app builds also benefit by ensuring the
# Dock icon matches the bundle icon even on cold-start animations. Tauri
# already pulls these crates transitively at the same versions, so adding
# them as direct deps adds zero extra compile cost.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSThread"] }

